--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
