--- a/userPanel/package.json
+++ b/userPanel/package.json
@@ -15,6 +15,7 @@
     "@udecode/plate": "^48.0.5",
     "@udecode/plate-common": "^41.0.13",
     "@udecode/plate-table": "^48.0.6",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
